fix @Mquery and alignement of content inside the box in contact section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,134 +1,144 @@
 /* mobile responsiveness design */
 @media screen and (max-width: 990px) {
-	.contact_us {
-		flex-direction: column;
-		width: 100%;
-	}
-	form,
-	.cbox {
-		margin: auto;
-		margin-bottom: 30px;
-	}
+  .contact_us {
+    flex-direction: column;
+    width: 100%;
+  }
+  form,
+  .cbox {
+    margin: auto;
+    margin-bottom: 30px;
+  }
 }
-@media screen and (max-width:1130px){
-	.menu-btn {
-		display: block;
-	}
+@media screen and (max-width: 1130px) {
+  .menu-btn {
+    display: block;
+  }
 
-	.navbar {
-		padding: 45px;
-	}
+  .navbar {
+    padding: 45px;
+  }
 
-	.logo {
-		position: absolute;
-		top: 30px;
-		left: 15px;
-	}
+  .logo {
+    position: absolute;
+    top: 30px;
+    left: 15px;
+  }
 
-	.nav-links {
-		flex-direction: column;
-		width: 100%;
-		height: 100vh;
-		justify-content: center;
-		background: #484872;
-		margin-top: -900px;
-		transition: all 0.5s ease;
-	}
+  .nav-links {
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    background: #484872;
+    margin-top: -900px;
+    transition: all 0.5s ease;
+  }
 
-	.mobile-menu {
-		margin-top: 0px;
-		border-bottom-right-radius: 30%;
-	}
+  .mobile-menu {
+    margin-top: 0px;
+    border-bottom-right-radius: 30%;
+  }
 
-	.nav-links li {
-		margin: 30px auto;
-	}
+  .nav-links li {
+    margin: 30px auto;
+  }
 }
 @media only screen and (max-width: 850px) {
-	/*events*/
-	.row {
-		flex-direction: column;
-	}
+  /*events*/
+  .row {
+    flex-direction: column;
+  }
 
-	.row .col {
-		margin: 20px auto;
-	}
+  .row .col {
+    margin: 20px auto;
+  }
 
-	.col img {
-		max-width: 90%;
-	}
+  .col img {
+    max-width: 90%;
+  }
 
-	/*explore*/
-	.explore-content {
-		width: 100%;
-	}
+  /*explore*/
+  .explore-content {
+    width: 100%;
+  }
 
-	/*tours*/
-	.tours {
-		width: 100%;
-	}
+  /*tours*/
+  .tours {
+    width: 100%;
+  }
 
-	/*footer*/
-	.footer {
-		padding: 10px;
-	}
-	.content-col {
-		width: 100%;
-	}
-	#about_us p {
-		width: 70%;
-	}
-
+  /*footer*/
+  .footer {
+    padding: 10px;
+  }
+  .content-col {
+    width: 100%;
+  }
+  #about_us p {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 770px) {
-	#about_us p {
-		width: 85%;
-		padding-top: 7em;
-		margin: auto;
-	}
-	form,
-	.cbox {
-		width: 90%;
-	}
-	.ctn {
-		margin: auto;
-	}
+  #about_us p {
+    width: 85%;
+    padding-top: 7em;
+    margin: auto;
+  }
+  form,
+  .cbox {
+    width: 90%;
+  }
+  .ctn {
+    margin: auto;
+  }
 
-	.explore-content {
-		margin: 0 auto;
-		text-align: center;
-		width: 80%;
-	}
+  .explore-content {
+    margin: 0 auto;
+    text-align: center;
+    width: 80%;
+  }
 
-	.explore-content .ctn {
-		margin: 40px auto;
-	}
+  .explore-content .ctn {
+    margin: 40px auto;
+  }
 }
-@media screen and (max-width:600px){
-	#about_us p{
-		margin: auto;
-	}
+@media screen and (max-width: 600px) {
+  #about_us p {
+    margin: auto;
+  }
 }
 @media screen and (max-width: 470px) {
-	.ctn {
-		padding: 13px 25px;
-	}
+  .ctn {
+    padding: 13px 25px;
+  }
+  .c_boxx a p {
+    font-size: 17.5px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .ctn {
+    padding: 13px 25px;
+  }
+  .c_boxx a p {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 850px) {
-	.content-col {
-		text-align: center;
-	}
-	.content-col .line {
-		margin: 0.5rem auto;
-	}
-	.content-col .ctn {
-		margin: 0 auto;
-		position: inherit;
-	}
-	.content-col p{
-		max-width: 75%;
-		text-align: justify;
-	}
+  .content-col {
+    text-align: center;
+  }
+  .content-col .line {
+    margin: 0.5rem auto;
+  }
+  .content-col .ctn {
+    margin: 0 auto;
+    position: inherit;
+  }
+  .content-col p {
+    max-width: 75%;
+    text-align: justify;
+  }
 }
